Blender 3.0 - The Rain demo scene breaks (Proxy to Override auto conversion) #91711

Closed
opened 2021-09-25 22:45:40 +02:00 by Raimund Klink · 15 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: a3027fb094
Worked: Blender 2.93.4

Short description of error
The nameplate on the Rain model is clipping and on the wrong side.

The nametag is broken due to the new Proxy to Override Auto Conversion setting. Disabling that setting allows things to load correctly.

Blender 2.93.4:
2.93.png
Blender 3.0:
3.0.png

Exact steps for others to reproduce the error
Open the Rain demo and hit F12
https://cloud.blender.org/p/characters/5f1ede754347a0fc05ba21a0

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 19:18, hash: `a3027fb094` Worked: Blender 2.93.4 **Short description of error** The nameplate on the Rain model is clipping and on the wrong side. The nametag is broken due to the new `Proxy to Override Auto Conversion` setting. Disabling that setting allows things to load correctly. Blender 2.93.4: ![2.93.png](https://archive.blender.org/developer/F10593537/2.93.png) Blender 3.0: ![3.0.png](https://archive.blender.org/developer/F10593538/3.0.png) **Exact steps for others to reproduce the error** Open the Rain demo and hit F12 https://cloud.blender.org/p/characters/5f1ede754347a0fc05ba21a0
Author
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Added subscriber: @LloydAlmeida

Added subscriber: @LloydAlmeida

Check the Info Editor

Proxies are deprecated (3 proxies were automatically converted to library overrides, 0 proxies could not be converted and 0 linked proxies were kept untouched). If you need to keep proxies for the time being, please disable the Proxy to Override Auto Conversion in Experimental user preferences

Fixes the Object issue.

Check the Info Editor Proxies are deprecated (3 proxies were automatically converted to library overrides, 0 proxies could not be converted and 0 linked proxies were kept untouched). If you need to keep proxies for the time being, please disable the `Proxy to Override Auto Conversion` in Experimental user preferences Fixes the Object issue.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

The missing textures might be a duplicate of #91697 (EEVEE regression: Generated texture coordinates completly missing)

The missing textures might be a duplicate of #91697 (EEVEE regression: Generated texture coordinates completly missing)
Author
Contributor

In #91711#1225908, @EAW wrote:
The missing textures might be a duplicate of #91697 (EEVEE regression: Generated texture coordinates completly missing)

That seems to be the issue for the pink textures.
EDIT: In the scene the tiles are a "Checker Texture" Node.
Same for the tongue. It is a "Noise Texture" Node

In #91711#1225881, @LloydAlmeida wrote:
Check the Info Editor

Proxies are deprecated (3 proxies were automatically converted to library overrides, 0 proxies could not be converted and 0 linked proxies were kept untouched). If you need to keep proxies for the time being, please disable the Proxy to Override Auto Conversion in Experimental user preferences

Fixes the Object issue.

But the issue is that it was not correctly converted. The position and rotation is wrong. I would have expected that it gets automagically and correctly converted.

> In #91711#1225908, @EAW wrote: > The missing textures might be a duplicate of #91697 (EEVEE regression: Generated texture coordinates completly missing) That seems to be the issue for the pink textures. EDIT: In the scene the tiles are a "Checker Texture" Node. Same for the tongue. It is a "Noise Texture" Node > In #91711#1225881, @LloydAlmeida wrote: > Check the Info Editor > > Proxies are deprecated (3 proxies were automatically converted to library overrides, 0 proxies could not be converted and 0 linked proxies were kept untouched). If you need to keep proxies for the time being, please disable the `Proxy to Override Auto Conversion` in Experimental user preferences > > Fixes the Object issue. But the issue is that it was not correctly converted. The position and rotation is wrong. I would have expected that it gets automagically and correctly converted.

If you mean Amy's nameplate, it loads correctly after disabling the Proxy settings in the Experimental section.

If you mean Amy's nameplate, it loads correctly after disabling the Proxy settings in the Experimental section.
Author
Contributor

3 proxies were automatically converted to library overrides

But it did that not right.

> 3 proxies were automatically converted to library overrides But it did that not right.

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

With #91697 fixed, the pink is gone. However, the incorrect proxy <-> override behavior is still present.

Confirming and will make clear what this bug is for in my next edit.

With #91697 fixed, the pink is gone. However, the incorrect proxy <-> override behavior is still present. Confirming and will make clear what this bug is for in my next edit.
Jesse Yurkovich changed title from Blender 3.0 - The Rain demo scene breaks to Blender 3.0 - The Rain demo scene breaks (Proxy to Override auto conversion) 2021-09-27 08:59:15 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

OK, so issue here is that the name tag (GEO-nametag) and its helper parent (HLP-nametag_parent) are two local objects, and the later is parented to a linked object (GEO-rain_top) which is part of the linked/proxified character.

Normally when making an override, we do not want to remap other local IDs's usages of linked ones that become overridden (this would break the 'boundaries', and can just as well create unwanted relationships).

Will make an exception for proxy conversion case though, I think in that specific case we do want to forcefully remap any dependency from the linked data to the newly created override one... But this might also be the wrong behavior in some cases. There is no real way to ensure a 100% correct behavior in such convoluted relationships, there will always be some cases requiring manual fixes (here it's rather trivial, just make HLP-nametag_parent child of the new override of GEO-rain_top).

OK, so issue here is that the name tag (`GEO-nametag`) and its helper parent (`HLP-nametag_parent`) are two local objects, and the later is parented to a linked object (`GEO-rain_top`) which is part of the linked/proxified character. Normally when making an override, we do not want to remap other local IDs's usages of linked ones that become overridden (this would break the 'boundaries', and can just as well create unwanted relationships). Will make an exception for proxy conversion case though, I *think* in that specific case we do want to forcefully remap any dependency from the linked data to the newly created override one... But this might also be the wrong behavior in some cases. There is no real way to ensure a 100% correct behavior in such convoluted relationships, there will always be some cases requiring manual fixes (here it's rather trivial, just make `HLP-nametag_parent` child of the new override of `GEO-rain_top`).

This issue was referenced by 8dcddbcc07

This issue was referenced by 8dcddbcc0778b6ac737e63ba7751a4441876e03c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-09-27 11:12:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91711
No description provided.