Fix T91711: Blender 3.0 - The Rain demo scene breaks (Proxy to Override auto conversion).

Proxy conversion is a fairly particular case of liboverride creation, in
which remapping all local usages of linked data probably makes more
sense, rather than only doing so whitin the overridden 'group' of IDs.